<resources>

    <string name="app_name" translatable="false">Fime_App
    </string>

    <string name="fime" translatable="false">
    FIME
</string>

    <string name="find_your_g">
Find {Your} game\n
    </string>

    <string name="buttonPristupi">
 Приступим
    </string>

    <string name="tips_and_se">
Tips and settings
</string>

    <string name="gpu_str">
GPU - это дискретная или встроенная видеокарта(видеоадаптер) в Вашем компьютере.
    </string>

    <string name="cpu_str">
CPU - это установленный центральный процессор в Вашем компьютере.
    </string>

    <string name="ram_str">
RAM - это количество установленной оперативной памяти в Ваш компьютер.
    </string>
    <string name="os_str">
OS - это операционная система которая установленна на Вашем компьютере.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="Fime_Finder">GameFinder</string>
    <string-array name="processors_array">
        <item>Не выбрано</item>
        <item>AMD Ryzen 5 3600</item>
        <item>Intel Core i3-10100F</item>
        <item>AMD Ryzen 5 2600</item>
        <item>Intel Core i5-11400F</item>
        <item>AMD Ryzen 5 5600X</item>
        <item>Intel Core i7-11700KF</item>
        <item>AMD Ryzen 7 5800X</item>
        <item>Intel Core i5-12600KF</item>
        <item>AMD Ryzen 9 5950X</item>
        <item>Intel Core i9-12900KF</item>

    </string-array>
    <string-array name="graphics_cards_array">
        <item>Не выбрано</item>
        <item>GeForce GTX 1050 Ti</item>
        <item>GeForce GTX 1660 Super</item>
        <item>GeForce RTX 2060 Super</item>
        <item>GeForce RTX 3050</item>
        <item>GeForce RTX 3060</item>
        <item>Radeon RX 6650 XT</item>
        <item>GeForce RTX 3070 TI</item>
        <item>GeForce RTX 3080 Ti</item>
        <item>GeForce RTX 4080 SUPER</item>
        <item>GeForce RTX 4090</item>
    </string-array>
    <string-array name="ram_array">
        <item>Не выбрано</item>
        <item>4GB</item>
        <item>8GB</item>
        <item>16GB</item>
        <item>32GB</item>
        <item>64GB</item>
    </string-array>
    <string-array name="operating_systems_array">
        <item>Не выбрано</item>
        <item>Windows</item>
        <item>Linux</item>
    </string-array>
    <string-array name="genres_array">
        <item>Не выбрано</item>
        <item>FPS Shooter</item>
        <item>Arcade game</item>
        <item>Action-adventure</item>
        <item>RPG</item>
        <item>Stealth action</item>
        <item>Survival horror</item>
        <item>Battle royale</item>
        <item>Football</item>
        <item>MOBA</item>
        <item>Sandbox</item>
    </string-array>
    <string-array name="years_array">
        <item>Не выбрано</item>
        <item>2023</item>
        <item>2021</item>
        <item>2020</item>
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2013</item>
        <item>2011</item>
        <item>2009</item>
        <item>2005</item>
        <item>2000</item>
    </string-array>
</resources>