<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/startscreen"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fimelogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginTop="139dp"
        android:layout_marginEnd="48dp"
        android:fontFamily="@font/iceberg"
        android:gravity="center_horizontal"
        android:lineHeight="156sp"
        android:text="@string/fime"
        android:textAppearance="@style/fime" />

    <TextView
        android:id="@+id/find_your_game_str"
        android:layout_width="256dp"
        android:layout_height="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/iceberg"
        android:gravity="center"
        android:lineHeight="39sp"
        android:text="@string/find_your_g"
        android:textAppearance="@style/find_your_g" />

    <Button
        android:id="@+id/btnPristupim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="73dp"
        android:layout_marginTop="654dp"
        android:layout_marginEnd="73dp"
        android:background="@drawable/buttonpristupit"
        android:fontFamily="@font/k2d_semibold"
        android:gravity="center"
        android:insetTop="3dp"
        android:insetBottom="3dp"
        android:lineHeight="39sp"
        android:onClick="onClick"
        android:shadowColor="#2B1D3E"
        android:text="@string/buttonPristupi"
        android:textAppearance="@style/buttonPristupit"
        android:textColor="@color/black" />

</RelativeLayout>
