<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/Setting_tips"
    android:layout_width="428dp"
    android:layout_height="926dp"
    android:background="@drawable/settings_tips">

    <TextView
        android:id="@+id/fimelogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="715dp"
        android:fontFamily="@font/iceberg"
        android:gravity="center|center_horizontal"
        android:lineHeight="156sp"
        android:text="@string/fime"
        android:textAppearance="@style/fime"
        />

    <TextView
        android:id="@+id/tips_and_settings"
        android:layout_width="235dp"
        android:layout_height="42dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="94dp"
        android:layout_marginTop="211dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="673dp"
        android:fontFamily="@font/iceberg"
        android:gravity="center_horizontal|top"
        android:lineHeight="39sp"
        android:text="@string/tips_and_se"
        android:textAppearance="@style/tips_and_sett" />

    <TextView
        android:id="@+id/gpu_tip"
        android:layout_width="398dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="571dp"
        android:fontFamily="@font/iceberg"
        android:gravity="left"
        android:lineSpacingExtra="2sp"
        android:text="@string/gpu_str"
        android:textAppearance="@style/gpu_stl" />

    <TextView
        android:id="@+id/cpu_tip"
        android:layout_width="398dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="355dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="511dp"
        android:fontFamily="@font/iceberg"
        android:gravity="left"
        android:lineSpacingExtra="2sp"
        android:text="@string/cpu_str"
        android:textAppearance="@style/cpu_stl"
        android:translationY="10sp" />

    <TextView
        android:id="@+id/ram_tip"
        android:layout_width="398dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="450dp"
        android:fontFamily="@font/iceberg"
        android:gravity="left"
        android:lineSpacingExtra="2sp"
        android:text="@string/ram_str"
        android:textAppearance="@style/ram_stl"
        android:translationY="20sp" />

    <TextView
        android:id="@+id/os_tip"
        android:layout_width="398dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="390dp"
        android:fontFamily="@font/iceberg"
        android:gravity="left"
        android:lineSpacingExtra="2sp"
        android:text="@string/os_str"
        android:textAppearance="@style/os_stl"
        android:translationY="30sp" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:id="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"

        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="429dp"
        android:layout_height="92dp"
        android:layout_alignTop="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="832dp"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="2dp"
        android:background="#7446BE"
        app:itemIconTint="@color/black"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout"
        app:menu="@menu/bottom_nav" />


</RelativeLayout>





